Viewport: When Show Gizmos is disable every mouse move would redraw the viewport #72900

Closed
opened 2020-01-04 17:36:52 +01:00 by Vyacheslav Kobozev · 13 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-03 10:02, hash: 9b74e648c5
Worked: 2.81 release

Short description of error
in 2.82:
2020-01-04_19-31-16.mp4

in 2.81
2020-01-04_19-32-18.mp4

Exact steps for others to reproduce the error
Set soft shadows and few samples In evee to see the problem.
Unnecessary resource consumption.
The same for AA in Workbench, so I don`t think it is Evee problem.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-03 10:02, hash: `9b74e648c5` Worked: 2.81 release **Short description of error** in 2.82: [2020-01-04_19-31-16.mp4](https://archive.blender.org/developer/F8259798/2020-01-04_19-31-16.mp4) in 2.81 [2020-01-04_19-32-18.mp4](https://archive.blender.org/developer/F8259799/2020-01-04_19-32-18.mp4) **Exact steps for others to reproduce the error** Set soft shadows and few samples In evee to see the problem. Unnecessary resource consumption. The same for AA in Workbench, so I don`t think it is Evee problem.

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscriber: @AcidRain0

Added subscriber: @AcidRain0

I don't think it's a bug. It's how eevee fake it's soft shadows by creating multiple shadows and blurring it

I don't think it's a bug. It's how eevee fake it's soft shadows by creating multiple shadows and blurring it

I am not about shadow flickering. I am talking about recalculating viewport after each mouse move!

I am not about shadow flickering. I am talking about recalculating viewport after each mouse move!
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I am not able to reproduce; I don't see that the viewport is redrawn by a mouse movement in latest b282. Things you can check

  • Do you have add-ons installed that might trigger a redraw event? Load blender with factory defaults.
  • Can you reproduce it on another computer?
I am not able to reproduce; I don't see that the viewport is redrawn by a mouse movement in latest b282. Things you can check * Do you have add-ons installed that might trigger a redraw event? Load blender with factory defaults. * Can you reproduce it on another computer?

@Jeroen-Bakker Hi. just checked the latest.
I found additional condition for bug replication: overlays should be hidden. Check this file please.
untitled.blend

2020-01-06_16-03-53.mp4

@Jeroen-Bakker Hi. just checked the latest. I found additional condition for bug replication: overlays should be hidden. Check this file please. [untitled.blend](https://archive.blender.org/developer/F8262200/untitled.blend) [2020-01-06_16-03-53.mp4](https://archive.blender.org/developer/F8262199/2020-01-06_16-03-53.mp4)
  1. Addon that can redraw is off (screencast)
  2. And yes, the same with default settings and clear Blender.
1. Addon that can redraw is off (screencast) 2. And yes, the same with default settings and clear Blender.
Jeroen Bakker self-assigned this 2020-01-06 15:02:29 +01:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Ok, I am able to reproduce. issue has to do with the Show Gizmo's, not the overlays.

Ok, I am able to reproduce. issue has to do with the Show Gizmo's, not the overlays.
Jeroen Bakker changed title from Evee/Workbench rerender vewport on each mouse move. Regression bug. to Viewport: When Show Gizmos is disable every mouse move would redraw the viewport 2020-01-06 15:03:15 +01:00

This issue was referenced by 830aa758b4

This issue was referenced by 830aa758b40bea7b40116049a3535103337a3003

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72900
No description provided.