Fix T72900: Mouse-move causes redraw when gizmos are hidden

Move redraw tagging to the gesture modal operator
to make sure this only runs when it's needed.

Caused by d591c8a350310, which tagged the region to redraw when the
gizmos were tagged to refresh, however they wont redraw when hidden.
Thanks to @jbakker for finding the root cause.